Switch Logo to times new roman, fix spacing

--- a/client/src/components/HeaderLogo/style.css
+++ b/client/src/components/HeaderLogo/style.css
@@ -1,6 +1,6 @@
 
 .header-css, .header-css-divider {
-  font-family: "Verdana", Verdana, sans-serif;
+  font-family: "Times New Roman", Times, serif;
   color: #000;
   font-size: inherit;
   font-weight: inherit;
@@ -8,7 +8,7 @@
 }
 
 .header-line:after {
-  font-family: "Verdana", Verdana, sans-serif;
+  font-family: "Times New Roman", Times, serif;
   content: attr(data-title);
   text-align: center;
   color: transparent;
@@ -31,29 +31,29 @@
 }
 
 .header-line-1:after {
-  margin-top: -9.5px;
+  margin-top: -8.25px;
 }
 
 .header-line-2:after {
-  margin-top: -9.5px;
+  margin-top: -7.25px;
 }
 
 .header-line-2 {
-  top: 35px;
+  top: 2px;
 }
 
 .header-line-3:after {
-  margin-top: 13.5px;
+  margin-top: -8.75px;
 }
 
 .header-line-3 {
-  top: 19px;
+  top: 37px;
 }
 
 .header-line-4:after {
-  margin-top: 28.35px;
+  margin-top: 25.25px;
 }
 
 .header-line-4 {
-  top: 38px;
+  top: 34px;
 }
